--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -47,7 +47,7 @@ const structuredData = {
       "availableLanguage": ["English", "Arabic"],
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "25th St - Naif - Dubai - United Arab Emirates", // Replace
+        "streetAddress": "Al Raffa St - Al Fahidi - Dubai - United Arab Emirates", // Replace
         "addressLocality": "Dubai",
         "addressRegion": "Dubai",
         "postalCode": "123241", 
