only image left

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -245,7 +245,7 @@
                   <p
                     class="product-desc text-xs text-gray-600 mt-1 transition-all duration-300 group-hover/item:text-gray-800 hidden lg:block"
                   >
-                    Battery powered, wireless security
+               Secure Battery-Powered Video Doorbell Kit
                   </p>
                 </a>
                 <!-- Outdoor Wi-Fi Cameras -->
@@ -271,7 +271,7 @@
                   <p
                     class="product-desc text-xs text-gray-600 mt-1 transition-all duration-300 group-hover/item:text-gray-800 hidden lg:block"
                   >
-                    Weatherproof exterior protection
+                    Robotic mop and vacuum set
                   </p>
                 </a>
                 <!-- Indoor Wi-Fi Cameras -->
@@ -297,7 +297,7 @@
                   <p
                     class="product-desc text-xs text-gray-600 mt-1 transition-all duration-300 group-hover/item:text-gray-800 hidden lg:block"
                   >
-                    Smart home monitoring solutions
+                   A carefully thought-out solution for a safer home.
                   </p>
                 </a>
               </div>
