--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,7 +60,7 @@ const { title, description, structuredData, keywords } = Astro.props;
         imageAlt: "Ezviz Dubai",
         description:
           description ??
-          "Ezviz Dubai is an authorized distributor of UNV products in Dubai, UAE.",
+          "Ezviz Dubai is an authorized distributor of Ezviz products in Dubai, UAE.",
       }}
       extend={{
         meta: [
@@ -94,7 +94,7 @@ const { title, description, structuredData, keywords } = Astro.props;
               },
               contactPoint: {
                 "@type": "ContactPoint",
-                telephone: "++971552929644",
+                telephone: "+971554221967",
                 contactType: "Sales",
               },
             }),
