--- a/src/pages/aboutus.astro
+++ b/src/pages/aboutus.astro
@@ -4,7 +4,7 @@ import "../styles/global.css";
 import Whatsapp from "../components/Whatsapp";
 const title = "Ezviz Camera Distributor in Dubai, UAE ";
 const description =
-  "Authorized Ezviz security camera distributor in Dubai & UAE. Meet our expert team providing top-quality surveillance solutions with professional installation support.";
+  "Authorized Ezviz security camera and solutions distributor in Dubai & UAE. Meet our expert team providing top-quality surveillance solutions with professional installation support.";
 const canonicalUrl = new URL(Astro.url.pathname, Astro.site);
 
 const structuredData = {
