--- a/src/pages/categories/homesensor.astro
+++ b/src/pages/categories/homesensor.astro
@@ -5,7 +5,7 @@ import "../../styles/global.css";
 import Whatsapp from "../../components/Whatsapp";
 
 const products = await getCollection('homesensor');
-const title = "Home Sensor Cameras | Ezviz Dubai Authorized Distributor";
+const title = "Home Sensor | Ezviz Dubai Authorized Distributor";
 const description = "High-performance surveillance solutions";
 const canonicalURL = new URL("/categories/homesensor", Astro.site);
 
