--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,7 +96,7 @@ const structuredData = {
       },
       "image": {
         "@type": "ImageObject",
-        "url":  `${Astro.url.origin}/unvdubai.png`,
+        "url":  `${Astro.url.origin}/images/logo.png`,
         "width": 1200,
         "height": 630,
         "caption": "Ezviz Dubai Authorized Distributor"
