--- a/src/pages/product/index.astro
+++ b/src/pages/product/index.astro
@@ -11,7 +11,7 @@ const categories = [
   {
     title: "Wire-Free Cameras",
     description:
-      "Wire-Free provides affordable, high-quality  cameras with smart analytics and performance",
+      "Wire-Free provides affordable, high-quality  cameras with smart analytics and performance.",
     imageUrl: "/images/wifi-free/BC2.png",
     href: "/categories/wireFree",
     icon: "video",
@@ -27,7 +27,7 @@ const categories = [
   {
     title: "Indoor Wi-Fi Cameras",
     description:
-      "Indoor Wi-Fi Cameras offer wide coverage, zoom, and robust stability",
+      "Indoor Wi-Fi Cameras offer wide coverage, zoom, and robust stability.",
     imageUrl: "/images//indoor-wifi/C1C-B.png",
     href: "/categories/indoorcamera",
     icon: "rotate-cw",
