--- a/src/pages/categories/homeappliances.astro
+++ b/src/pages/categories/homeappliances.astro
@@ -5,7 +5,7 @@ import "../../styles/global.css";
 import Whatsapp from "../../components/Whatsapp";
 
 const products = await getCollection('smarthomeappliances');
-const title = "Home Appliaces Cameras | Ezviz Dubai Authorized Distributor";
+const title = "Home Appliaces  | Ezviz Dubai Authorized Distributor";
 const description = "High-performance surveillance solutions";
 const canonicalURL = new URL("/categories/homeappliances", Astro.site);
 
