--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -47,10 +47,10 @@ const structuredData = {
       "availableLanguage": ["English", "Arabic"],
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Al Raffa St - Al Fahidi - Dubai - United Arab Emirates", // Replace
+        "streetAddress": "Al Raffa St - Al Fahidi - Dubai - United Arab Emirates", 
         "addressLocality": "Dubai",
         "addressRegion": "Dubai",
-        "postalCode": "123241", 
+        "postalCode": "00000", 
         "addressCountry": "AE"
       }
     },
