--- a/src/pages/categories/wireFree.astro
+++ b/src/pages/categories/wireFree.astro
@@ -96,6 +96,7 @@ const structuredData = {
   }
 };
 ---
+<meta charset="UTF-8" />
 <Layout  title={title} 
     description={description}
     structuredData={structuredData}
