--- a/src/components/GoogleAnalytics.astro
+++ b/src/components/GoogleAnalytics.astro
@@ -1,11 +1,11 @@
 <!-- Google tag (gtag.js) -->
-<script is:inline type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-S419ZWENMS"></script>
+<script is:inline type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-7D5CN5YQ3Z"></script>
 <script type="text/partytown" is:inline>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-S419ZWENMS');
+  gtag('config', 'G-7D5CN5YQ3Z');
 </script>
 <!-- Google Tag Manager -->
 
